@@ -31,16 +31,16 @@ object f_config_time: Tf_config_time
       Height = 514
       Top = 0
       Width = 474
-      ActivePage = Page3
+      ActivePage = Page1
       Align = alClient
       Anchors = [akLeft, akRight, akBottom]
       ShowTabs = False
-      TabIndex = 2
+      TabIndex = 0
       TabOrder = 0
       object Page1: TTabSheet
         Caption = 'Time'
-        ClientHeight = 510
-        ClientWidth = 470
+        ClientHeight = 506
+        ClientWidth = 466
         object Label142: TLabel
           Left = 286
           Height = 15
@@ -51,9 +51,9 @@ object f_config_time: Tf_config_time
         end
         object CheckBox2: TCheckBox
           Left = 40
-          Height = 23
+          Height = 26
           Top = 56
-          Width = 126
+          Width = 129
           Caption = 'Auto-refresh every '
           OnClick = CheckBox2Click
           TabOrder = 1
@@ -101,9 +101,9 @@ object f_config_time: Tf_config_time
           end
           object CheckBox4: TCheckBox
             Left = 8
-            Height = 23
+            Height = 26
             Top = 70
-            Width = 163
+            Width = 166
             Caption = 'Use another DT-UT value'
             OnClick = CheckBox4Click
             TabOrder = 0
@@ -492,9 +492,9 @@ object f_config_time: Tf_config_time
         end
         object CheckBox1: TCheckBox
           Left = 40
-          Height = 23
+          Height = 26
           Top = 24
-          Width = 118
+          Width = 121
           Caption = 'Use system time'
           OnClick = CheckBox1Click
           TabOrder = 0
@@ -512,8 +512,8 @@ object f_config_time: Tf_config_time
       end
       object Page2: TTabSheet
         Caption = 'Simulation'
-        ClientHeight = 510
-        ClientWidth = 470
+        ClientHeight = 506
+        ClientWidth = 466
         object stepreset: TSpeedButton
           Left = 220
           Height = 25
@@ -740,8 +740,8 @@ object f_config_time: Tf_config_time
       end
       object Page3: TTabSheet
         Caption = 'Animation'
-        ClientHeight = 510
-        ClientWidth = 470
+        ClientHeight = 506
+        ClientWidth = 466
         object GroupBox1: TGroupBox
           Left = 22
           Height = 80
@@ -889,7 +889,7 @@ object f_config_time: Tf_config_time
           end
           object ComboBox1: TComboBox
             Left = 174
-            Height = 23
+            Height = 22
             Top = 216
             Width = 113
             ItemHeight = 0
