@@ -1,2 +1,4 @@
 Version 3.5 release Notes
 
+- Compute DeltaT values from "Five Millennium Canon of Solar Eclipses, Espenak & Meeus, 2006"
+- Add Tirion constellation figures created by James Trogolo
